<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_discounts"
            android:title="@string/menu_list" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
        <item
            android:id="@+id/nav_banks"
            android:icon="@drawable/ic_bank"
            android:title="@string/menu_banks" />

        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_chart" />
    </group>
</menu>
