<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.mcoc.fsent.fragments.ConsumerItemListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_consumer_list" />

    <fragment
        android:id="@+id/nav_banks"
        android:name="com.mcoc.fsent.fragments.BankListFragment"
        android:label="@string/menu_banks"
        tools:layout="@layout/fragment_bank_list" />

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.mcoc.fsent.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_slideshow" />
</navigation>